@@ -86,6 +86,10 @@ end
 deletemeshfile(mwpath('post_vmesh.1.*'));
 fprintf(1,'creating volumetric mesh from a surface mesh ...\n');
 
+fprintf(1,sprintf('\n%s\n%s\n',...
+     'WARNING: the license for "tetgen" is non-free and does not permit commertial use.', ...
+     'Please use the "cgalmesh" or "cgalpoly" options where free-software is desired.'));
+
 cmdopt=getvarfrom('base','ISO2MESH_TETGENOPT');
 if(isempty(cmdopt))
   system([' "' mcpath('tetgen') exesuff '" -A -q1.414a' num2str(maxvol) ' ' moreopt ' "' mwpath('post_vmesh.poly') '"']);
